2015-04-20  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Upgrade to 0.05.

2015-04-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (CCID_CARD_INIT): New.
	* src/usb_desc.c (gnukConfigDescriptor): Update dwDefaultClock,
	dwMaximumClock,	dwFeatures, and bClassEnvelope.
	* src/usb_ctrl.c (freq_table): Change the value to 4000MHz.
	(usb_cb_handle_event): Call ccid_card_change_signal after configure.
	* src/usb-icc.c (ccid_thread): Change EV_CARD_CHANGE handling.

2015-04-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call chopstx_main_init.
	* src/Makefile.in (DEFS): Remove CHX_PRIO_MAIN.

2015-04-17  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure: Fix shell syntax.

2015-03-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_conf.h (ICC_NUM_INTERFACES, HID_NUM_INTERFACES)
	(HID_NUM_INTERFACES, VCOM_NUM_INTERFACES, MSC_NUM_INTERFACES)
	(NUM_INTERFACES): Define here (moved from usb_desc.c).
	(ICC_INTERFACE, HID_INTERFACE, VCOM_INTERFACE_0, VCOM_INTERFACE_1)
	(MSC_INTERFACE): New.
	* src/usb_ctrl.c (gnuk_setup_endpoints_for_interface)
	(usb_cb_setup, usb_cb_ctrl_write_finish): Use *_INTERFACE.
	* src/usb_desc.c (gnukConfigDescriptor): Likewise.

2015-03-06  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_sign_25519): Return 0.

2015-02-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_internal_authenticate): Fix storing to
	res_APDU_size.

2015-02-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso): Fix counter update for EdDSA.  Thanks
	to Jonathan Schleifer.

	* src/call-rsa.c (rsa_sign): Don't set res_APDU_len.
	(rsa_decrypt): Likewise, but get OUTPUT_LEN_P as an argument.

2015-02-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_pso): Fix EdDSA. Use GPG_KEY_FOR_SIGNING.

2014-12-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.4.

2014-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/flash.c (flash_key_getpage, flash_key_release_page): New.

	* src/openpgp-do.c (gpg_do_delete_prvkey): New arg.